SERVER-71920 Serialize collection version updates in `ShardingCatalogManager::updateTimeSeriesGranularity`